# fruits

./: .gitignore  CMakeLists.txt
source/: background.cpp  fruit.cpp  game.cpp  hp.cpp  main.cpp  player.cpp  score.cpp  sprite.cpp
source/headers/: background.h  config.h  fruit.h  game.h  hp.h  player.h  score.h  sprite.h
